--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 	<main>
 		<section class="container">
 			<h2>Meus pacientes</h2>
+			<label for="filtrar-tabela"> Filtre:</label>
+			<input type="text" name="filtro" id="filtrar-tabela" placeholder="Digite o nome do paciente">
 			<table>
 				<thead>
 					<tr>
@@ -70,10 +72,14 @@
 					</tr>
 				</tbody>
 			</table>
+			<button id="buscar-paciente" class="botao bto-principal">Buscar paciente</button>
 		</section>
 
 		<section class="container">
 			<h2 id="titulo-form">Adicionar novo paciente</h2>
+			<ul id="mensagens-erro">
+
+			</ul>
 			<form id="form-adiciona">
 				<div class="">
 					<label for="nome">Nome:</label>
@@ -91,13 +97,16 @@
 					<label for="gordura">% de Gordura:</label>
 					<input id="gordura" name="gordura" type="text" placeholder="digite a porcentagem de gordura do seu paciente" class="campo campo-medio">
 				</div>
-		
+
 				<button id="adicionar-paciente" class="botao bto-principal">Adicionar</button>
 			</form>
 		</section>
 	</main>
 	<script src="js/principal.js"></script>
 	<script src="js/form.js"></script>
+	<script src="js/remover-paciente.js"></script>
+	<script src="js/buscar-pacientes.js"></script>
+	<script src="js/filtro.js"></script>
 </body>
 
 </html>
