--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 					</tr>
 				</tbody>
 			</table>
+			<span id="erro-ajax" class="invisivel">Erro ao buscar os pacientes</span>
 			<button id="buscar-paciente" class="botao bto-principal">Buscar paciente</button>
 		</section>
 
